p02/sample/y.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: program_head program_declarations program_body

    2 program_head: PROGRAM ID program_parameters SEMICOLON

    3 program_declarations: declarations subprogram_declarations

    4 program_body: compound_statement PERIOD

    5 program_parameters: %empty
    6                   | LPAREN program_parameter_list RPAREN

    7 program_parameter_list: identifier_list

    8 identifier_list: ID
    9                | identifier_list COMMA ID

   10 declarations: %empty
   11             | declarations VAR identifier_list COLON type SEMICOLON

   12 type: standard_type
   13     | ARRAY LBRACKET INTLIT DOUBLEPERIOD INTLIT RBRACKET OF standard_type

   14 standard_type: ID

   15 subprogram_declarations: %empty
   16                        | subprogram_declarations subprogram_declaration SEMICOLON

   17 subprogram_declaration: subprogram_head declarations compound_statement

   18 subprogram_head: FUNCTION ID subprogram_parameters COLON standard_type SEMICOLON
   19                | PROCEDURE ID subprogram_parameters SEMICOLON

   20 subprogram_parameters: %empty
   21                      | LPAREN parameter_list RPAREN

   22 parameter_list: identifier_list COLON type
   23               | parameter_list SEMICOLON identifier_list COLON type

   24 compound_statement: BEGAN optional_statements END

   25 optional_statements: %empty
   26                    | statement_list

   27 statement_list: statement
   28               | statement_list SEMICOLON statement

   29 statement: variable ASSIGN expression
   30          | procedure_statement
   31          | alternative_statement
   32          | iterative_statement
   33          | compound_statement

   34 alternative_statement: if_statement

   35 iterative_statement: while_statement
   36                    | repeat_statement
   37                    | for_statement

   38 if_statement: IF expression THEN statement ELSE statement

   39 while_statement: WHILE expression DO statement

   40 repeat_statement: REPEAT statement_list UNTIL expression

   41 for_statement: FOR variable ASSIGN expression TO expression DO statement
   42              | FOR variable ASSIGN expression DOWNTO expression DO statement

   43 variable: ID
   44         | ID LBRACKET expression RBRACKET

   45 procedure_statement: ID
   46                    | ID LPAREN expression_list RPAREN

   47 expression_list: expression
   48                | expression_list COMMA expression

   49 expression: simple_expression
   50           | simple_expression relop simple_expression

   51 relop: EQUAL
   52      | DIAMOND
   53      | LESSTHAN
   54      | LESSTHANEQUAL
   55      | GREATERTHAN
   56      | GREATERTHANEQUAL

   57 simple_expression: term
   58                  | sign term

   59 sign: PLUS
   60     | MINUS

   61 simple_expression: simple_expression addop term

   62 addop: PLUS
   63      | MINUS
   64      | OR

   65 term: factor
   66     | term mulop factor

   67 mulop: STAR
   68      | SLASH
   69      | DIV
   70      | MOD
   71      | AND

   72 factor: ID
   73       | ID LBRACKET expression_list RBRACKET
   74       | ID LPAREN expression_list RPAREN
   75       | LPAREN expression RPAREN
   76       | NOT factor
   77       | INTLIT
   78       | REALIT
   79       | CHRLIT


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 2
SEMICOLON (259) 2 11 16 18 19 23 28
PERIOD (260) 4
LPAREN (261) 6 21 46 74 75
RPAREN (262) 6 21 46 74 75
ID (263) 2 8 9 14 18 19 43 44 45 46 72 73 74
COMMA (264) 9 48
COLON (265) 11 18 22 23
VAR (266) 11
ARRAY (267) 13
LBRACKET (268) 13 44 73
RBRACKET (269) 13 44 73
INTLIT (270) 13 77
DOUBLEPERIOD (271) 13
OF (272) 13
FUNCTION (273) 18
PROCEDURE (274) 19
BEGAN (275) 24
END (276) 24
ASSIGN (277) 29 41 42
IF (278) 38
THEN (279) 38
ELSE (280) 38
WHILE (281) 39
DO (282) 39 41 42
REPEAT (283) 40
UNTIL (284) 40
FOR (285) 41 42
TO (286) 41
DOWNTO (287) 42
EQUAL (288) 51
DIAMOND (289) 52
LESSTHAN (290) 53
LESSTHANEQUAL (291) 54
GREATERTHAN (292) 55
GREATERTHANEQUAL (293) 56
PLUS (294) 59 62
MINUS (295) 60 63
OR (296) 64
STAR (297) 67
SLASH (298) 68
DIV (299) 69
MOD (300) 70
AND (301) 71
NOT (302) 76
REALIT (303) 78
CHRLIT (304) 79
ERROR (305)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
program_head (53)
    on left: 2, on right: 1
program_declarations (54)
    on left: 3, on right: 1
program_body (55)
    on left: 4, on right: 1
program_parameters (56)
    on left: 5 6, on right: 2
program_parameter_list (57)
    on left: 7, on right: 6
identifier_list (58)
    on left: 8 9, on right: 7 9 11 22 23
declarations (59)
    on left: 10 11, on right: 3 11 17
type (60)
    on left: 12 13, on right: 11 22 23
standard_type (61)
    on left: 14, on right: 12 13 18
subprogram_declarations (62)
    on left: 15 16, on right: 3 16
subprogram_declaration (63)
    on left: 17, on right: 16
subprogram_head (64)
    on left: 18 19, on right: 17
subprogram_parameters (65)
    on left: 20 21, on right: 18 19
parameter_list (66)
    on left: 22 23, on right: 21 23
compound_statement (67)
    on left: 24, on right: 4 17 33
optional_statements (68)
    on left: 25 26, on right: 24
statement_list (69)
    on left: 27 28, on right: 26 28 40
statement (70)
    on left: 29 30 31 32 33, on right: 27 28 38 39 41 42
alternative_statement (71)
    on left: 34, on right: 31
iterative_statement (72)
    on left: 35 36 37, on right: 32
if_statement (73)
    on left: 38, on right: 34
while_statement (74)
    on left: 39, on right: 35
repeat_statement (75)
    on left: 40, on right: 36
for_statement (76)
    on left: 41 42, on right: 37
variable (77)
    on left: 43 44, on right: 29 41 42
procedure_statement (78)
    on left: 45 46, on right: 30
expression_list (79)
    on left: 47 48, on right: 46 48 73 74
expression (80)
    on left: 49 50, on right: 29 38 39 40 41 42 44 47 48 75
relop (81)
    on left: 51 52 53 54 55 56, on right: 50
simple_expression (82)
    on left: 57 58 61, on right: 49 50 61
sign (83)
    on left: 59 60, on right: 58
addop (84)
    on left: 62 63 64, on right: 61
term (85)
    on left: 65 66, on right: 57 58 61 66
mulop (86)
    on left: 67 68 69 70 71, on right: 66
factor (87)
    on left: 72 73 74 75 76 77 78 79, on right: 65 66 76


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program       go to state 2
    program_head  go to state 3


State 1

    2 program_head: PROGRAM . ID program_parameters SEMICOLON

    ID  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_head . program_declarations program_body

    $default  reduce using rule 10 (declarations)

    program_declarations  go to state 6
    declarations          go to state 7


State 4

    2 program_head: PROGRAM ID . program_parameters SEMICOLON

    LPAREN  shift, and go to state 8

    $default  reduce using rule 5 (program_parameters)

    program_parameters  go to state 9


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: program_head program_declarations . program_body

    BEGAN  shift, and go to state 10

    program_body        go to state 11
    compound_statement  go to state 12


State 7

    3 program_declarations: declarations . subprogram_declarations
   11 declarations: declarations . VAR identifier_list COLON type SEMICOLON

    VAR  shift, and go to state 13

    $default  reduce using rule 15 (subprogram_declarations)

    subprogram_declarations  go to state 14


State 8

    6 program_parameters: LPAREN . program_parameter_list RPAREN

    ID  shift, and go to state 15

    program_parameter_list  go to state 16
    identifier_list         go to state 17


State 9

    2 program_head: PROGRAM ID program_parameters . SEMICOLON

    SEMICOLON  shift, and go to state 18


State 10

   24 compound_statement: BEGAN . optional_statements END

    ID      shift, and go to state 19
    BEGAN   shift, and go to state 10
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    REPEAT  shift, and go to state 22
    FOR     shift, and go to state 23

    $default  reduce using rule 25 (optional_statements)

    compound_statement     go to state 24
    optional_statements    go to state 25
    statement_list         go to state 26
    statement              go to state 27
    alternative_statement  go to state 28
    iterative_statement    go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    repeat_statement       go to state 32
    for_statement          go to state 33
    variable               go to state 34
    procedure_statement    go to state 35


State 11

    1 program: program_head program_declarations program_body .

    $default  reduce using rule 1 (program)


State 12

    4 program_body: compound_statement . PERIOD

    PERIOD  shift, and go to state 36


State 13

   11 declarations: declarations VAR . identifier_list COLON type SEMICOLON

    ID  shift, and go to state 15

    identifier_list  go to state 37


State 14

    3 program_declarations: declarations subprogram_declarations .
   16 subprogram_declarations: subprogram_declarations . subprogram_declaration SEMICOLON

    FUNCTION   shift, and go to state 38
    PROCEDURE  shift, and go to state 39

    $default  reduce using rule 3 (program_declarations)

    subprogram_declaration  go to state 40
    subprogram_head         go to state 41


State 15

    8 identifier_list: ID .

    $default  reduce using rule 8 (identifier_list)


State 16

    6 program_parameters: LPAREN program_parameter_list . RPAREN

    RPAREN  shift, and go to state 42


State 17

    7 program_parameter_list: identifier_list .
    9 identifier_list: identifier_list . COMMA ID

    COMMA  shift, and go to state 43

    $default  reduce using rule 7 (program_parameter_list)


State 18

    2 program_head: PROGRAM ID program_parameters SEMICOLON .

    $default  reduce using rule 2 (program_head)


State 19

   43 variable: ID .
   44         | ID . LBRACKET expression RBRACKET
   45 procedure_statement: ID .
   46                    | ID . LPAREN expression_list RPAREN

    LPAREN    shift, and go to state 44
    LBRACKET  shift, and go to state 45

    ASSIGN    reduce using rule 43 (variable)
    $default  reduce using rule 45 (procedure_statement)


State 20

   38 if_statement: IF . expression THEN statement ELSE statement

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    expression         go to state 54
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


State 21

   39 while_statement: WHILE . expression DO statement

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    expression         go to state 59
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


State 22

   40 repeat_statement: REPEAT . statement_list UNTIL expression

    ID      shift, and go to state 19
    BEGAN   shift, and go to state 10
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    REPEAT  shift, and go to state 22
    FOR     shift, and go to state 23

    compound_statement     go to state 24
    statement_list         go to state 60
    statement              go to state 27
    alternative_statement  go to state 28
    iterative_statement    go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    repeat_statement       go to state 32
    for_statement          go to state 33
    variable               go to state 34
    procedure_statement    go to state 35


State 23

   41 for_statement: FOR . variable ASSIGN expression TO expression DO statement
   42              | FOR . variable ASSIGN expression DOWNTO expression DO statement

    ID  shift, and go to state 61

    variable  go to state 62


State 24

   33 statement: compound_statement .

    $default  reduce using rule 33 (statement)


State 25

   24 compound_statement: BEGAN optional_statements . END

    END  shift, and go to state 63


State 26

   26 optional_statements: statement_list .
   28 statement_list: statement_list . SEMICOLON statement

    SEMICOLON  shift, and go to state 64

    $default  reduce using rule 26 (optional_statements)


State 27

   27 statement_list: statement .

    $default  reduce using rule 27 (statement_list)


State 28

   31 statement: alternative_statement .

    $default  reduce using rule 31 (statement)


State 29

   32 statement: iterative_statement .

    $default  reduce using rule 32 (statement)


State 30

   34 alternative_statement: if_statement .

    $default  reduce using rule 34 (alternative_statement)


State 31

   35 iterative_statement: while_statement .

    $default  reduce using rule 35 (iterative_statement)


State 32

   36 iterative_statement: repeat_statement .

    $default  reduce using rule 36 (iterative_statement)


State 33

   37 iterative_statement: for_statement .

    $default  reduce using rule 37 (iterative_statement)


State 34

   29 statement: variable . ASSIGN expression

    ASSIGN  shift, and go to state 65


State 35

   30 statement: procedure_statement .

    $default  reduce using rule 30 (statement)


State 36

    4 program_body: compound_statement PERIOD .

    $default  reduce using rule 4 (program_body)


State 37

    9 identifier_list: identifier_list . COMMA ID
   11 declarations: declarations VAR identifier_list . COLON type SEMICOLON

    COMMA  shift, and go to state 43
    COLON  shift, and go to state 66


State 38

   18 subprogram_head: FUNCTION . ID subprogram_parameters COLON standard_type SEMICOLON

    ID  shift, and go to state 67


State 39

   19 subprogram_head: PROCEDURE . ID subprogram_parameters SEMICOLON

    ID  shift, and go to state 68


State 40

   16 subprogram_declarations: subprogram_declarations subprogram_declaration . SEMICOLON

    SEMICOLON  shift, and go to state 69


State 41

   17 subprogram_declaration: subprogram_head . declarations compound_statement

    $default  reduce using rule 10 (declarations)

    declarations  go to state 70


State 42

    6 program_parameters: LPAREN program_parameter_list RPAREN .

    $default  reduce using rule 6 (program_parameters)


State 43

    9 identifier_list: identifier_list COMMA . ID

    ID  shift, and go to state 71


State 44

   46 procedure_statement: ID LPAREN . expression_list RPAREN

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    expression_list    go to state 72
    expression         go to state 73
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


State 45

   44 variable: ID LBRACKET . expression RBRACKET

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    expression         go to state 74
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


State 46

   75 factor: LPAREN . expression RPAREN

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    expression         go to state 75
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


State 47

   72 factor: ID .
   73       | ID . LBRACKET expression_list RBRACKET
   74       | ID . LPAREN expression_list RPAREN

    LPAREN    shift, and go to state 76
    LBRACKET  shift, and go to state 77

    $default  reduce using rule 72 (factor)


State 48

   77 factor: INTLIT .

    $default  reduce using rule 77 (factor)


State 49

   59 sign: PLUS .

    $default  reduce using rule 59 (sign)


State 50

   60 sign: MINUS .

    $default  reduce using rule 60 (sign)


State 51

   76 factor: NOT . factor

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    factor  go to state 78


State 52

   78 factor: REALIT .

    $default  reduce using rule 78 (factor)


State 53

   79 factor: CHRLIT .

    $default  reduce using rule 79 (factor)


State 54

   38 if_statement: IF expression . THEN statement ELSE statement

    THEN  shift, and go to state 79


State 55

   49 expression: simple_expression .
   50           | simple_expression . relop simple_expression
   61 simple_expression: simple_expression . addop term

    EQUAL             shift, and go to state 80
    DIAMOND           shift, and go to state 81
    LESSTHAN          shift, and go to state 82
    LESSTHANEQUAL     shift, and go to state 83
    GREATERTHAN       shift, and go to state 84
    GREATERTHANEQUAL  shift, and go to state 85
    PLUS              shift, and go to state 86
    MINUS             shift, and go to state 87
    OR                shift, and go to state 88

    $default  reduce using rule 49 (expression)

    relop  go to state 89
    addop  go to state 90


State 56

   58 simple_expression: sign . term

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    term    go to state 91
    factor  go to state 58


State 57

   57 simple_expression: term .
   66 term: term . mulop factor

    STAR   shift, and go to state 92
    SLASH  shift, and go to state 93
    DIV    shift, and go to state 94
    MOD    shift, and go to state 95
    AND    shift, and go to state 96

    $default  reduce using rule 57 (simple_expression)

    mulop  go to state 97


State 58

   65 term: factor .

    $default  reduce using rule 65 (term)


State 59

   39 while_statement: WHILE expression . DO statement

    DO  shift, and go to state 98


State 60

   28 statement_list: statement_list . SEMICOLON statement
   40 repeat_statement: REPEAT statement_list . UNTIL expression

    SEMICOLON  shift, and go to state 64
    UNTIL      shift, and go to state 99


State 61

   43 variable: ID .
   44         | ID . LBRACKET expression RBRACKET

    LBRACKET  shift, and go to state 45

    $default  reduce using rule 43 (variable)


State 62

   41 for_statement: FOR variable . ASSIGN expression TO expression DO statement
   42              | FOR variable . ASSIGN expression DOWNTO expression DO statement

    ASSIGN  shift, and go to state 100


State 63

   24 compound_statement: BEGAN optional_statements END .

    $default  reduce using rule 24 (compound_statement)


State 64

   28 statement_list: statement_list SEMICOLON . statement

    ID      shift, and go to state 19
    BEGAN   shift, and go to state 10
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    REPEAT  shift, and go to state 22
    FOR     shift, and go to state 23

    compound_statement     go to state 24
    statement              go to state 101
    alternative_statement  go to state 28
    iterative_statement    go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    repeat_statement       go to state 32
    for_statement          go to state 33
    variable               go to state 34
    procedure_statement    go to state 35


State 65

   29 statement: variable ASSIGN . expression

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    expression         go to state 102
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


State 66

   11 declarations: declarations VAR identifier_list COLON . type SEMICOLON

    ID     shift, and go to state 103
    ARRAY  shift, and go to state 104

    type           go to state 105
    standard_type  go to state 106


State 67

   18 subprogram_head: FUNCTION ID . subprogram_parameters COLON standard_type SEMICOLON

    LPAREN  shift, and go to state 107

    $default  reduce using rule 20 (subprogram_parameters)

    subprogram_parameters  go to state 108


State 68

   19 subprogram_head: PROCEDURE ID . subprogram_parameters SEMICOLON

    LPAREN  shift, and go to state 107

    $default  reduce using rule 20 (subprogram_parameters)

    subprogram_parameters  go to state 109


State 69

   16 subprogram_declarations: subprogram_declarations subprogram_declaration SEMICOLON .

    $default  reduce using rule 16 (subprogram_declarations)


State 70

   11 declarations: declarations . VAR identifier_list COLON type SEMICOLON
   17 subprogram_declaration: subprogram_head declarations . compound_statement

    VAR    shift, and go to state 13
    BEGAN  shift, and go to state 10

    compound_statement  go to state 110


State 71

    9 identifier_list: identifier_list COMMA ID .

    $default  reduce using rule 9 (identifier_list)


State 72

   46 procedure_statement: ID LPAREN expression_list . RPAREN
   48 expression_list: expression_list . COMMA expression

    RPAREN  shift, and go to state 111
    COMMA   shift, and go to state 112


State 73

   47 expression_list: expression .

    $default  reduce using rule 47 (expression_list)


State 74

   44 variable: ID LBRACKET expression . RBRACKET

    RBRACKET  shift, and go to state 113


State 75

   75 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 114


State 76

   74 factor: ID LPAREN . expression_list RPAREN

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    expression_list    go to state 115
    expression         go to state 73
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


State 77

   73 factor: ID LBRACKET . expression_list RBRACKET

    LPAREN  shift, and go to state 46
    ID      shift, and go to state 47
    INTLIT  shift, and go to state 48
    PLUS    shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    REALIT  shift, and go to state 52
    CHRLIT  shift, and go to state 53

    expression_list    go to state 116
    expression         go to state 73
    simple_expression  go to state 55
    sign               go to state 56
    term               go to state 57
    factor             go to state 58


State 78

   76 factor: NOT factor .

    $default  reduce using rule 76 (factor)


State 79

   38 if_statement: IF expression THEN . statement ELSE statement

    ID      shift, and go to state 19
    BEGAN   shift, and go to state 10
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    REPEAT  shift, and go to state 22
    FOR     shift, and go to state 23

    compound_statement     go to state 24
    statement              go to state 117
    alternative_statement  go to state 28
    iterative_statement    go to state 29
    if_statement           go to state 30
    while_statement        go to state 31
    repeat_statement       go to state 32
    for_statement          go to state 33
    variable               go to state 34
    procedure_statement    go to state 35


State 80

   51 relop: EQUAL .

    $default  reduce using rule 51 (relop)


State 81

   52 relop: DIAMOND .

    $default  reduce using rule 52 (relop)


State 82

   53 relop: LESSTHAN .

    $default  reduce using rule 53 (relop)


State 83

   54 relop: LESSTHANEQUAL .

    $default  reduce using rule 54 (relop)


State 84

   55 relop: GREATERTHAN .

    $default  reduce using rule 55 (relop)


State 85
